# 2026_Exploration_2

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/drb2/: TODO.md  aggregate.py  chunk_a.sh  chunk_b.sh  chunk_c.sh  chunk_d.sh  chunk_e.sh  chunk_e_resume.sh  claim_summary.py  cost_ledger.py  evaluate_with_deepseek.py  hf_baselines.py  pilot_tasks.json  pilot_tasks_education.json  plot_matrix.py  plot_results.py  run_all.sh  run_evoresearcher.py  run_timings.jsonl
benchmarks/drb2/results/: FINDINGS.md  education_followup_cost_ledger.csv  education_vs_cold_summary.md  (+61 more)
evoresearcher/: __init__.py  config.py  llm.py  main.py  schemas.py
evoresearcher/agents/: evolution_memory_agent.py  intake_agent.py  proposal_agent.py  research_agent.py
evoresearcher/memory/: mcp_server.py  store.py
evoresearcher/orchestration/: graph.py
evoresearcher/report/: pdf.py
evoresearcher/research/: elo_tournament.py  tree_search.py
evoresearcher/retrieval/: search.py
evoresearcher/tui/: observer.py
outputs/ML_task_example1/: elo_matches.json  evidence.json  idea_tree.json  memory_context.json  memory_updates.json  research_report.md  research_report.tex  run_summary.json  top_ideas.json
outputs/general_task_example1/: elo_matches.json  evidence.json  idea_tree.json  memory_context.json  memory_updates.json  research_report.md  research_report.tex  run_summary.json  top_ideas.json
tests/: test_ablation_flags_unit.py  test_llm_retry_unit.py  test_memory_and_graph.py  test_memory_store_unit.py  test_proposal_resilience_unit.py  test_review_guided_tree_unit.py
